--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,9 @@
+buildscript {
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.2'
+    }
+}
+
 plugins {
     id "org.jetbrains.intellij" version "0.3.12"
 }
@@ -8,6 +14,7 @@ version '0.9-SNAPSHOT'
 version = "${version}.$buildNumber"
 allprojects {
     apply plugin: 'java'
+    apply plugin: 'com.github.johnrengelman.shadow'
     sourceCompatibility = javaVersion
     targetCompatibility = javaVersion
     tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
@@ -45,6 +52,12 @@ allprojects {
         testLogging {
             exceptionFormat = 'full'
         }
+    }
+
+    shadowJar {
+        zip64 true
+        configurations = [project.configurations.idea]
+        minimize()
     }
 }
 
