shadowJar only include .class file

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 javaVersion = 1.8
 javaTargetVersion = 1.8
 buildNumber = SNAPSHOT
+org.gradle.jvmargs=-Xmx3g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
