--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,8 @@ javaVersion = 1.8
 javaTargetVersion = 1.8
 buildNumber = SNAPSHOT
 org.gradle.jvmargs=-Xmx3g -XX:MaxPermSize=2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+ideaVersion = 2018.2
+sources = true
+isEAP = false
+localIdePath =
