transpiled code running

--- a/transpiler/build.gradle
+++ b/transpiler/build.gradle
@@ -11,6 +11,10 @@ intellij {
     alternativeIdePath localIdePath
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     implementation project(':parser1')
     compile group: 'net.openhft', name: 'compiler', version: '2.3.1'
