--- a/transpiler/build.gradle
+++ b/transpiler/build.gradle
@@ -17,7 +17,7 @@ repositories {
 
 dependencies {
     implementation project(':parser1')
-    compile group: 'net.openhft', name: 'compiler', version: '2.3.1'
+    compile group: 'org.mdkt.compiler', name: 'InMemoryJavaCompiler', version: '1.3.0'
     testCompileOnly(
             'junit:junit:4.12'
     )
