--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'dexscript'
-include 'parser1', 'parser2', 'transpiler'
+include 'parser1', 'parser2', 'transpiler', 'transpiler2'
