resolve fail return Denotation.Error

--- a/parser2/build.gradle
+++ b/parser2/build.gradle
@@ -15,6 +15,7 @@ shadowJar {
 }
 
 dependencies {
+    compile('org.jetbrains:annotations:16.0.2')
     testCompileOnly(
             'junit:junit:4.12'
     )
