--- a/transpiler2/build.gradle
+++ b/transpiler2/build.gradle
@@ -3,7 +3,7 @@ repositories {
 }
 
 dependencies {
-    implementation project(':ast')
+    implementation project(':parser2')
     compile group: 'org.mdkt.compiler', name: 'InMemoryJavaCompiler', version: '1.3.0'
     testCompileOnly(
             'junit:junit:4.12'
