--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -4,7 +4,8 @@ repositories {
 
 dependencies {
     implementation project(':frontend')
-    compile('org.mdkt.compiler:InMemoryJavaCompiler1.3.0')
+    compile('org.mdkt.compiler:InMemoryJavaCompiler:1.3.0')
+    testCompileOnly('com.google.jimfs:jimfs:1.1')
     testCompileOnly(
             'junit:junit:4.12'
     )
