--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -6,7 +6,6 @@ dependencies {
     compile('org.jetbrains:annotations:16.0.2')
     testCompile(
             'junit:junit:4.12',
-            'com.atlassian.commonmark:commonmark:0.12.1',
-            'com.atlassian.commonmark:commonmark-ext-gfm-tables:0.9.0'
+            project(':test-framework')
     )
 }
