type ref support package name and type name

--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,12 @@ allprojects {
     sourceCompatibility = javaVersion
     targetCompatibility = javaVersion
     tasks.withType(JavaCompile) { options.encoding = 'UTF-8' }
+
+    sourceSets {
+        test {
+            resources {
+                srcDirs = ['src/test/java']
+            }
+        }
+    }
 }
