--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -5,8 +5,9 @@ repositories {
 dependencies {
     implementation project(':frontend')
     compile('org.mdkt.compiler:InMemoryJavaCompiler:1.3.0')
-    testCompileOnly('com.google.jimfs:jimfs:1.1')
-    testCompileOnly(
-            'junit:junit:4.12'
+    testCompile(
+            'com.google.jimfs:jimfs:1.1',
+            'junit:junit:4.12',
+            project(':test-framework')
     )
 }
