--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -5,6 +5,7 @@ repositories {
 dependencies {
     compile('org.jetbrains:annotations:16.0.2')
     testCompile(
+            'com.google.jimfs:jimfs:1.1',
             'junit:junit:4.12',
             project(':test-framework')
     )
