--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'dexscript'
-include 'frontend', 'backend', 'debug', 'test-framework'
+include 'frontend', 'backend', 'debug', 'test-framework', 'observability-api', 'observability-http'
