--- a/observability-api/build.gradle
+++ b/observability-api/build.gradle
@@ -3,6 +3,7 @@ repositories {
 }
 dependencies {
     compile('org.jetbrains:annotations:16.0.2')
+    compile('org.mdkt.compiler:InMemoryJavaCompiler:1.3.0')
     testCompile(
             'com.google.jimfs:jimfs:1.1',
             'junit:junit:4.12',
